docker-compose not able to accept requests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,13 @@ services:
 
   app:
     build: .
-    container_name: app
+    container_name: appc
     image: app
     environment:
       PG_URL: 'postgres://user:pass@postgres:5432/postgres'
     ports:
-      - 8080:8080
-      - 9000:9000
+      - "127.0.0.1:9090:9090"
+      - "127.0.0.1:8080:8080"
     depends_on:
       - postgres
 volumes:
